# web-sockets-chat

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  run_prod.sh
backend/: .env-example  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml
backend/auth/: auth.py  database.py  manager.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 021d25f13fb2_init.py  0856bf602463_init.py  2794a9781a10_init.py  5ad263d0d857_init.py  6df125f3ae64_init.py  820692b07729_database_creation.py  93158c3a1688_init.py  bd1ec645aaba_initdf.py  d11e1518f9f6_init.py  e66b3b4f16a2_init.py
backend/models/: models.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/auth/: config.py  manager.py  models.py  router.py  schemas.py  utils.py
backend/src/auth/services/: database.py
backend/src/chat/: models.py  router.py  schemas.py  utils.py  websocket_manager.py
backend/tests/: __init__.py  conftest.py  test_first.py  test_main.py
frontend/: .env-example  Dockerfile  Dockerfile-prod  package-lock.json  package.json
frontend/src/: App.js  App.jsx  index.css  index.jsx
frontend/src/components/: Header.jsx
frontend/src/content/: App.jsx  Auth.jsx  Chat.jsx  ChatUtils.jsx  DepricatedChat.jsx  Home.jsx  Login.jsx  Logout.jsx  Profile.jsx  Register.jsx
frontend/src/content/css/: App.css  Chat.css  Login.css  Register.css
frontend/src/css/: main.css
nginx/dev/: host.conf
nginx/prod/: host.conf
