[tool.poetry]
name = "web-sockets-chat"
version = "0.1.0"
description = ""
authors = ["dima <dmitriy.drogovoz@akvelon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
websockets = "^10.4"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

