[tool.poetry]
name = "docker-tutorial"
version = "0.1.0"
description = ""
authors = ["dima <dmitriy.drogovoz@akvelon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
ormar = "^0.12.1"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
alembic = "^1.9.2"
python-dotenv = "^0.21.1"
Jinja2 = "^3.1.2"
websockets = "^10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

